--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "gulp-watch": "^5.0.1"
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
